z-indexes fixed

--- a/src/sass/_loader.scss
+++ b/src/sass/_loader.scss
@@ -3,7 +3,7 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  z-index: 1001;
+  z-index: 99;
   display: flex;
   justify-content: center;
   align-items: center;
