--- a/src/sass/_pagination.scss
+++ b/src/sass/_pagination.scss
@@ -68,5 +68,6 @@
     top: 10px;
     left: 50%;
     transform: translate(-50%, 0);
+    z-index: 9;
   }
 }
